--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
         </div>
         <div class="hero-section">
             <div class="intro">
-                <span>Hi, I am</span>
-                <h2>Maxius Shija</h2>
-            </div>
-
-            <div class="skillz">
-                <span>FRONT-END DEV</span>
-            </div>
-            <div class="profile-picture">
-                <img src="/images/IMG_9347.JPG"
-                    alt="Max's picture standing on a green background showing a smile  while pocketing his hands.">
+                <span>Hi, I am</span><br>
+                <span>Maxius Shija</span>
+                <div class="skillz">
+                    <span>FRONT-END DEV</span>
+                    <div class="profile-picture">
+                        <img src="/images/IMG_9347.JPG"
+                            alt="Max's picture standing on a green background showing a smile  while pocketing his hands.">
+                    </div>
+                </div>
             </div>
 
             <div class="content-section">
@@ -34,7 +33,7 @@
                     <hr />
                 </div>
                 <div class="content-section-info">
-                    <div>
+                    <div class="info">
                         <h4>Example</h4>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus error reiciendis totam
                             delectus iste quis, esse officia nostrum, mollitia veniam fuga rem dolores libero! Maxime,
@@ -42,7 +41,7 @@
                             perspiciatis consequuntur minus totam quidem natus, rem reprehenderit assumenda? Vero,
                             laudantium quo.</p>
                     </div>
-                    <div>
+                    <div class="info">
                         <h4>Example</h4>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus error reiciendis totam
                             delectus iste quis, esse officia nostrum, mollitia veniam fuga rem dolores libero! Maxime,
@@ -50,7 +49,7 @@
                             perspiciatis consequuntur minus totam quidem natus, rem reprehenderit assumenda? Vero,
                             laudantium quo.</p>
                     </div>
-                    <div>
+                    <div class="info">
                         <h4>Example</h4>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus error reiciendis totam
                             delectus iste quis, esse officia nostrum, mollitia veniam fuga rem dolores libero! Maxime,
