--- a/index.html
+++ b/index.html
@@ -16,51 +16,49 @@
         </div>
         <div class="hero-section">
             <div class="intro">
-                <span>Hi, I am</span><br>
+                <span>Hi, I am</span>
                 <span>Maxius Shija</span>
                 <div class="skillz">
                     <span>FRONT-END DEV</span>
-                    <div class="profile-picture">
-                        <img src="/images/IMG_9347.JPG"
-                            alt="Max's picture standing on a green background showing a smile  while pocketing his hands.">
-                    </div>
                 </div>
             </div>
-
-            <div class="content-section">
-                <div class="header">
-                    <h4>What I Do</h4>
-                    <hr />
+           
+            <div class="profile-picture">
+                <img src="/images/IMG_9347.JPG"
+                    alt="Max's picture standing on a green background showing a smile  while pocketing his hands.">
+            </div>
+        </div>
+        <div class="content-section">
+            <div class="header">
+                <h4>What I Do</h4>
+                <hr />
+            </div>
+            <div class="content-section-info">
+                <div class="Design">
+                    <h4>Design + Development</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus error reiciendis totam
+                        delectus iste quis, esse officia nostrum, mollitia veniam fuga rem dolores libero! Maxime,
+                        iure repellat! Nesciunt optio tenetur veniam voluptates ab iure corporis, ipsa atque velit
+                        perspiciatis consequuntur minus totam quidem natus, rem reprehenderit assumenda? Vero,
+                        laudantium quo.</p>
                 </div>
-                <div class="content-section-info">
-                    <div class="info">
-                        <h4>Example</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus error reiciendis totam
-                            delectus iste quis, esse officia nostrum, mollitia veniam fuga rem dolores libero! Maxime,
-                            iure repellat! Nesciunt optio tenetur veniam voluptates ab iure corporis, ipsa atque velit
-                            perspiciatis consequuntur minus totam quidem natus, rem reprehenderit assumenda? Vero,
-                            laudantium quo.</p>
-                    </div>
-                    <div class="info">
-                        <h4>Example</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus error reiciendis totam
-                            delectus iste quis, esse officia nostrum, mollitia veniam fuga rem dolores libero! Maxime,
-                            iure repellat! Nesciunt optio tenetur veniam voluptates ab iure corporis, ipsa atque velit
-                            perspiciatis consequuntur minus totam quidem natus, rem reprehenderit assumenda? Vero,
-                            laudantium quo.</p>
-                    </div>
-                    <div class="info">
-                        <h4>Example</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus error reiciendis totam
-                            delectus iste quis, esse officia nostrum, mollitia veniam fuga rem dolores libero! Maxime,
-                            iure repellat! Nesciunt optio tenetur veniam voluptates ab iure corporis, ipsa atque velit
-                            perspiciatis consequuntur minus totam quidem natus, rem reprehenderit assumenda? Vero,
-                            laudantium quo.</p>
-                    </div>
+                <div class="E-Commerce">
+                    <h4>E-Commerce</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus error reiciendis totam
+                        delectus iste quis, esse officia nostrum, mollitia veniam fuga rem dolores libero! Maxime,
+                        iure repellat! Nesciunt optio tenetur veniam voluptates ab iure corporis, ipsa atque velit
+                        perspiciatis consequuntur minus totam quidem natus, rem reprehenderit assumenda? Vero,
+                        laudantium quo.</p>
+                </div>
+                <div class="Wordpress">
+                    <h4>Wordpress</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus error reiciendis totam
+                        delectus iste quis, esse officia nostrum, mollitia veniam fuga rem dolores libero! Maxime,
+                        iure repellat! Nesciunt optio tenetur veniam voluptates ab iure corporis, ipsa atque velit
+                        perspiciatis consequuntur minus totam quidem natus, rem reprehenderit assumenda? Vero,
+                        laudantium quo.</p>
                 </div>
             </div>
-
-
         </div>
     </div>
     <script src="https://kit.fontawesome.com/55ef0f7537.js" crossorigin="anonymous"></script>
